remove old version

--- a/package.json
+++ b/package.json
@@ -17,5 +17,5 @@
   },
   "homepage": "",
   "wiki": "https://github.com/JGrndn/cwPopout/wiki",
-  "evolve-version": "4.0 - 4.2"
+  "evolve-version": "4.2"
 }
